# plgo-options

./: .gcloudignore  .gitignore  Dockerfile  README.md  margin_report.md  pyproject.toml  requirements.txt  run.py
data/: ETH - Dashboard Risk+PnL Improvement Proposal.xlsx  ETH - target shifted v2.csv  ETH - target shifted.csv  ETH - target.csv  FIL - Dashboard Risk+PnL Improvement Proposal.xlsx  FIL - target v2.csv  FIL - target v3.csv  FIL - target.csv
data/positions/: PLGO_Trades_2026-06-01.xlsx  PLGO_Trades_2026-06-08.xlsx
docs/docs/: optimizer_run_logic.md
scripts/: cleanup_db_only.py  diag_fil_mtm.py  diag_out.txt  diag_recon.py  fetch_deribit_eth.py  fix_db_only.py  import_eth_backup_trades.py  import_fil_missing.py  insert_extras_20260420.py  insert_extras_prod_20260420.py  insert_new_trades_20260420.py  insert_new_trades_prod_20260420.py  margin_tool.py  optimize_portfolio.py  payoff.py  read_eth_trades.py  recon_fil.py  recon_new_trades.py  recon_prod_20260420.py  replay_optim_usecase.py  seed_collateral_sheet.py  smile_example.py  sync_trades_from_xlsx.py  trades_xlsx_to_csv.py
src/plgo_options/: __init__.py  config.py
src/plgo_options/data/: database.py  trade_repository.py  trades.py
src/plgo_options/market_data/: deribit_client.py  schemas.py
src/plgo_options/optimization/: base_optimizer.py  collateral_optimization.py  elastic_net.py  math_utils.py  misc_utils.py  models.py  optim_usecase.py  optimizer.py  optimizer_utils.py  optimizer_v3.py  option_smile.py  pulp_solver.py  snapshot.py  snapshot_legacy.py
src/plgo_options/web/: app.py
(+21 files in other folders)
